--- a/package.json
+++ b/package.json
@@ -17,9 +17,19 @@
   },
   "homepage": "https://github.com/Pawhurr/Project2#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.1",
+    "flash": "^1.1.0",
     "handlebars": "^4.1.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
   }
 }
