added modal to world map page

--- a/config/config.json
+++ b/config/config.json
@@ -2,24 +2,24 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "project2",
-    "port": 8889,
+    "database": "countries_db",
+    "port": 3306,
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "root",
-    "database": "project2",
-    "port": 8889,
+    "database": "countries_db",
+    "port": 3306,
     "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": "root",
-    "database": "project2",
-    "port": 8889,
+    "database": "countries_db",
+    "port": 3306,
     "host": "localhost",
     "dialect": "mysql"
   }
