fixed animation lag

--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,8 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "countries_db",
-    "port": 3306,
+    "database": "project2",
+    "port": 8889,
     "host": "localhost",
     "dialect": "mysql"
   },
