--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prettier": "^1.17.1",
+    "sal.js": "^0.5.0",
     "sequelize": "^5.8.6"
   }
 }
