--- a/config/config.json
+++ b/config/config.json
@@ -17,11 +17,11 @@
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
-    "username": "root",
-    "password": "root",
-    "database": "countries_db",
-    "port": 8889,
-    "host": "localhost",
+    "username": "en9o73rtoal2mi05",
+    "password": "v3cg22eldoz86yyy",
+    "database": "yr9kkifn3z7kocyh",
+    "port": 3306,
+    "host": "s554ongw9quh1xjs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
